# maelstrom-fly-io

./: .gitignore  Cargo.toml  LICENSE.md  README.md  run  run.py
broadcast/: Cargo.toml
broadcast/src/: lib.rs  main.rs
echo/: Cargo.toml
echo/src/: main.rs
maelstrom-common/: README.md
maelstrom-common/src/: lib.rs
solutions-go/: Makefile  go.mod  go.sum
solutions-go/cmd/broadcast-multi-node/: main.go
solutions-go/cmd/broadcast-single-node/: main.go
solutions-go/cmd/echo/: main.go
solutions-go/cmd/unique-id-generation/: main.go
solutions-rust/: Cargo.toml  README.md
solutions-rust/broadcast/: Cargo.toml
solutions-rust/broadcast/src/: lib.rs  main.rs
solutions-rust/echo/: Cargo.toml
solutions-rust/echo/src/: main.rs
solutions-rust/maelstrom-common/: Cargo.toml  README.md
solutions-rust/maelstrom-common/src/: lib.rs
solutions-rust/src/: envelope.rs  lib.rs  pubsub.rs
solutions-rust/unique-id-generation/: Cargo.toml
solutions-rust/unique-id-generation/src/: main.rs
unique-id-generation/: Cargo.toml
unique-id-generation/src/: main.rs
