[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "03-broadcast"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
maelstrom-common = { version = "0.1.0", path = "../maelstrom-common" }