[package]
name = "echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01-echo"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
maelstrom-common = { version="0.1.0", path = "../maelstrom-common" }
serde_json = "1.0.93"
thiserror = "1.0.38"
