[package]
name = "unique-id-generation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "02-unique-id-generation"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
maelstrom-common = { version = "0.1.1", path = "../maelstrom-common" }
thiserror = "1.0.38"
serde_json = "1.0.93"
